--- a/index.html
+++ b/index.html
@@ -352,14 +352,14 @@ JAVASCRIPTS
         console.log(getQueryStringValue("p"))
         var id_indx = getQueryStringValue("p")
         if (id_indx != undefined) {
-            window.location = `https://jedaaaaaaaaa.github.io/jedaaaaaaaaa/index-p=${id_indx}.html`;
+            window.location = `https://jedaaaaaaaaa.github.io/index-p=${id_indx}.html`;
         }
         var cat_indx = getQueryStringValue("cat")
         var pgae_indx = getQueryStringValue("page")
         if (cat_indx != undefined && pgae_indx != undefined) {
-            window.location = `https://jedaaaaaaaaa.github.io/jedaaaaaaaaa/index-cat=${cat_indx}&paged=${pgae_indx}.html`;
+            window.location = `https://jedaaaaaaaaa.github.io/index-cat=${cat_indx}&paged=${pgae_indx}.html`;
         } else if (cat_indx != undefined) {
-            window.location = `https://jedaaaaaaaaa.github.io/jedaaaaaaaaa/index-cat=${cat_indx}.html`;
+            window.location = `https://jedaaaaaaaaa.github.io/index-cat=${cat_indx}.html`;
         }
 
 
