--- a/404.html
+++ b/404.html
@@ -135,7 +135,7 @@ permalink: /404.html
         </a> -->
 
         <!-- <a href="/" class="logo logo-img-2x"> -->
-        <img width="32" height="32" title="" alt="" src="./jeda-logo-256.jpg" />
+        <img width="32" height="32" title="" alt="" src="./assets/img/jeda-logo-256.jpg" />
         <!-- </a> -->
     </div>
 </body>
