--- a/404.html
+++ b/404.html
@@ -135,7 +135,9 @@ permalink: /404.html
         </a> -->
 
         <!-- <a href="/" class="logo logo-img-2x"> -->
-        <img width="32" height="32" title="" alt="" src="./assets/img/jeda-logo-256.jpg" />
+        <!-- <img width="32" height="32" title="" alt="" src="./assets/img/jeda-logo-256.jpg" /> -->
+        <img src="data:image/jpeg;base64,/9j/4RiDRXhpZgAATU0AKgA..." width="32" height="32" alt="base64 test">
+
         <!-- </a> -->
     </div>
 </body>
